fun:1、创建各分包入口2、创建Button demo

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,9 +2,12 @@
   "name": "toy-element",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "@toy-element/components": "workspace:*"
   },
   "keywords": [],
   "author": "",
