--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -2,11 +2,14 @@
   "name": "@toy-element/docs",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "vitepress": "1.0.0-rc.44"
+  }
 }
