--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "pnpm --filter @toy-element/play dev",
     "docs:dev": "pnpm --filter @toy-element/docs dev",
     "docs:build": "pnpm --filter @toy-element/docs build",
-    "test":"echo 'todo'"
+    "test":"echo 'todo'",
+    "build": "pnpm --filter eric-ui build"
   },
   "keywords": [],
   "author": "",
@@ -34,6 +35,7 @@
     "@toy-element/hooks": "workspace:*",
     "@toy-element/utils": "workspace:*",
     "@toy-element/theme": "workspace:*" ,
-    "toy-element": "workspace:*"
+    "toy-element": "workspace:*",
+    "eric-ui": "workspace:*"
   }
 }
