--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "pnpm --filter @toy-element/play dev",
     "docs:dev": "pnpm --filter @toy-element/docs dev",
     "docs:build": "pnpm --filter @toy-element/docs build",
-    "test":"echo 'todo'",
-    "build": "pnpm --filter eric-ui build"
+    "test":"echo 'todo'"
   },
   "keywords": [],
   "author": "",
@@ -35,7 +34,6 @@
     "@toy-element/hooks": "workspace:*",
     "@toy-element/utils": "workspace:*",
     "@toy-element/theme": "workspace:*" ,
-    "toy-element": "workspace:*",
-    "eric-ui": "workspace:*"
+    "toy-element": "workspace:*"
   }
 }
